--- a/Botsite/botsite/index.html
+++ b/Botsite/botsite/index.html
@@ -37,7 +37,7 @@ body {
               <div class="col-xs-12">
                 <ul>
                   <li>Find More Info about Botsite</li>
-                  <li><a class="main-color" href="https://facebook.com" target="_blank">Botsite v.0.1.0</a></li>
+                  <li><a class="main-color" href="https://google.com" target="_blank">Botsite v.0.1.0</a></li>
                     </ul>
                   </div>
               </div>
