--- a/Botsite/botsite/index.html
+++ b/Botsite/botsite/index.html
@@ -29,7 +29,7 @@ body {
             <h1><span class="main-color">Botsite </span><br />sophisticated way of rebranding chatbots</h1>
           </div>
               <div class="col-xs-6">
-                <a id="getStarted" class="btn btn-lg btn-default btn-block" href="#" target="_top"><i></i> Get Started</a>
+                <a id="getStarted" class="btn btn-lg btn-default btn-block" href="https://m.me/100474448401294" target="_top"><i></i> Get Started</a>
               </div>
             </div>
                  
