--- a/Botsite/botsite/index.html
+++ b/Botsite/botsite/index.html
@@ -26,7 +26,7 @@ body {
     <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <h1><span class="main-color">Botsite </span><br />sophisticated way of rebranding chatbots</h1>
+            <h1><span class="main-color">Botsite </span><br />sophisticated way <br />of rebranding<br /> chatbots</h1>
           </div>
               <div class="col-xs-6">
                 <a id="getStarted" class="btn btn-lg btn-default btn-block" href="https://m.me/100474448401294" target="_top"><i></i> Get Started</a>
