--- a/Botsite/botsite/index.html
+++ b/Botsite/botsite/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.3/animate.min.css">
     <link rel="manifest" href="/manifest.json" />
-  <meta name="theme-color" content="yellow" />
+  <meta name="theme-color" content="black" />
 </head>
 <style>
 body {
