--- a/Botsite/botsite/index.html
+++ b/Botsite/botsite/index.html
@@ -49,5 +49,6 @@ body {
       <div id="hidden"></div>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <script src="js/app.js"></script>
+       <script>var BotStar={appId:"s9d0b0474-0f01-4475-95ac-d9f920ba7afd",mode:"livechat"};!function(t,a){var e=function(){(e.q=e.q||[]).push(arguments)};e.q=e.q||[],t.BotStarApi=e;!function(){var t=a.createElement("script");t.type="text/javascript",t.async=1,t.src="https://widget.botstar.com/static/js/widget.js";var e=a.getElementsByTagName("script")[0];e.parentNode.insertBefore(t,e)}();}(window,document)</script>
 </body>
 </html>
