--- a/Botsite/botsite/index.html
+++ b/Botsite/botsite/index.html
@@ -49,6 +49,5 @@ body {
       <div id="hidden"></div>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <script src="js/app.js"></script>
-       <script>var BotStar={appId:"s9d0b0474-0f01-4475-95ac-d9f920ba7afd",mode:"livechat"};!function(t,a){var e=function(){(e.q=e.q||[]).push(arguments)};e.q=e.q||[],t.BotStarApi=e;!function(){var t=a.createElement("script");t.type="text/javascript",t.async=1,t.src="https://widget.botstar.com/static/js/widget.js";var e=a.getElementsByTagName("script")[0];e.parentNode.insertBefore(t,e)}();}(window,document)</script>
-</body>
+     <div id="fb-root"></div><div class="fb-customerchat" attribution="setup_tool" page_id="113600953719734" theme_color="#ffffff" greeting_dialog_display="show"></div><script>window.fbAsyncInit=function(){FB.init({xfbml:!0,version:"v3.2"})},function(e,t,n){var c,o=e.getElementsByTagName(t)[0];e.getElementById(n)||(c=e.createElement(t),c.id=n,c.src="https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js",o.parentNode.insertBefore(c,o))}(document,"script","facebook-jssdk");</script>
 </html>
